--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <meta charset="UTF-8">
 	<title>GBPS Network</title>
-  <base href="C:/Program Files/Git/broadband/">
+  <base href="https://lakshmivseelam.github.io/broadband/">
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- For IE -->
