dummy details updated

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   
   <meta charset="UTF-8">
-	<title>GBPS Network</title>
+	<title>FAPS Network</title>
   <base href="/">
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
